k8-files/vault-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: vault
  labels:
    app: vault
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: vault
    spec:
      containers:
      - name: vault
        image: 705858723891.dkr.ecr.ap-south-1.amazonaws.com/vault
        imagePullPolicy: Always
        securityContext:
          capabilities:
            add:
              - IPC_LOCK
      - name: consul-vault-agent
        image: 705858723891.dkr.ecr.ap-south-1.amazonaws.com/consul
        args:
          - "agent"
          - "-bind=0.0.0.0"
          - "-retry-join=consul-0.consul.$(NAMESPACE).svc.cluster.local"
          - "-retry-join=consul-1.consul.$(NAMESPACE).svc.cluster.local"
          - "-retry-join=consul-2.consul.$(NAMESPACE).svc.cluster.local"
          - "-client=0.0.0.0"
          - "-config-file=/etc/consul.d/ui.json"
          - "-datacenter=dc1"
          - "-domain=cluster.local"
          - "-ui"
          - "-disable-host-node-id"
          - "-data-dir=/home/ubuntu/consul"
      imagePullSecrets:
      - name: secret-bhanu
