k8-files/consul-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: consul-0
spec:
  type: LoadBalancer
  selector:
    statefulset.kubernetes.io/pod-name: consul-0
  ports:
  - protocol: TCP
    port: 8500
    targetPort: 8500
