k8-files/vault-0-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: vault-0
spec:
  type: NodePort
  selector:
    statefulset.kubernetes.io/pod-name: vault-0
  ports:
  - protocol: TCP
    port: 8200
    targetPort: 8200
