k8-files/vault-1-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: vault-1
spec:
  type: NodePort
  selector:
    statefulset.kubernetes.io/pod-name: vault-1
  ports:
  - protocol: TCP
    port: 8200
    targetPort: 8200
