k8-files/vault-2-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: vault-2
spec:
  type: NodePort
  selector:
    statefulset.kubernetes.io/pod-name: vault-2
  ports:
  - protocol: TCP
    port: 8200
    targetPort: 8200
