k8-files/vault-headless.yml
apiVersion: v1
kind: Service
metadata:
  name: vault
  labels:
    name: vault
spec:
  clusterIP: None
  ports:
    - name: http
      port: 8200
      targetPort: 8200
  selector:
    app: vault
