k8-files/ingress-resource-nodeport.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vault
  labels:
    app: vault
  annotations:
    # trigger the alb-ingress-controller
    kubernetes.io/ingress.class: "alb"
    
    # set ALB parameters
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "instance"
    #alb.ingress.kubernetes.io/security-groups: my-security-group-ids, ...
    #alb.ingress.kubernetes.io/subnets: my-vpc-subnets, ...
    #alb.ingress.kubernetes.io/certificate-arn: my-acm-certificate-arn
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS": 443}]'

    # allow 404s on the health check
   # alb.ingress.kubernetes.io/healthcheck-path: "/v1/sys/health"
    #alb.ingress.kubernetes.io/success-codes: "200"
spec:
  # forward all requests to nginx-ingress-controller
  rules:
  - http:
      paths:
      - path: "/*"
        backend:
          serviceName: vault-0
          servicePort: 8200
      - path: "/*"
        backend:
          serviceName: vault-1
          servicePort: 8200
      - path: "/*"
        backend:
          serviceName: vault-2
          servicePort: 8200
